# workspace-blueprint

./: .gitignore  ALWS_PRD.md  BUILD_STATUS.md  CLAUDE.md  CONTEXT.md  MANIFEST.md  START-HERE.md  i got ai in my dream thats how ik i.txt  leftOffHere.md
_archive/: CLAUDE.md  CONTEXT.md  (+1 more)
programs/game_engine/world/: CLAUDE.md  CONTEXT.md  Cargo.toml  MANIFEST.md  clippy.toml
programs/game_engine/world/.cargo/: config.toml
programs/game_engine/world/crates/: README.md
programs/game_engine/world/crates/nexus-backends/: Cargo.toml
programs/game_engine/world/crates/nexus-backends/src/: backend.rs  hybrid.rs  lib.rs  local.rs  rvf.rs
programs/game_engine/world/crates/nexus-core/: Cargo.toml
programs/game_engine/world/crates/nexus-core/src/: config.rs  constants.rs  lib.rs  math.rs  types.rs
programs/game_engine/world/crates/nexus-events/: Cargo.toml
programs/game_engine/world/crates/nexus-events/src/: lib.rs
programs/game_engine/world/crates/nexus-node/: Cargo.toml
programs/game_engine/world/crates/nexus-node/src/: clients.rs  main.rs  protocol.rs  quic_server.rs  server.rs  tick_loop.rs
programs/game_engine/world/crates/nexus-schema/: Cargo.toml
programs/game_engine/world/crates/nexus-schema/src/: descriptor.rs  hash.rs  lib.rs  registry.rs
programs/game_engine/world/crates/nexus-semantic/: Cargo.toml
programs/game_engine/world/crates/nexus-semantic/src/: agents.rs  http.rs  identity.rs  layout.rs  lib.rs  llm.rs  queue.rs  reformation.rs  router.rs  worker.rs
programs/game_engine/world/crates/nexus-simulation/: Cargo.toml
programs/game_engine/world/crates/nexus-spatial/: Cargo.toml
programs/game_engine/world/crates/rvf-runtime/: Cargo.toml
programs/game_engine/world/programs/: CLAUDE.md  CONTEXT.md  MANIFEST.md
programs/game_engine/world/programs/node-manager/: CLAUDE.md  CONTEXT.md  MANIFEST.md
programs/game_engine/world/programs/simulation/: CLAUDE.md  CONTEXT.md  MANIFEST.md
programs/game_engine/world/programs/spatial/: CLAUDE.md  CONTEXT.md  MANIFEST.md
programs/game_engine/world/schemas/: agent_task.json  computer.json  display_frame.json  file.json  physics_body.json  spatial_manifest.json
programs/oracle/oracle-shared/: CLAUDE.md  CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/oracle-shared/oracle_shared/: CLAUDE.md  CONTEXT.md  MANIFEST.md  __init__.py  providers.py
programs/oracle/oracle-shared/oracle_shared/contracts/: __init__.py  anomaly_event.py  copy_trade_approval.py  insight.py  market_state.py  operator_alert.py  post_mortem.py  signal.py  trade_execution.py  trade_thesis.py  wallet_profile.py
programs/oracle/oracle-shared/oracle_shared/db/: __init__.py  models.py  repository.py
programs/oracle/oracle-shared/tests/: test_db_models.py
programs/oracle/programs/knowledge-base/: CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/knowledge-base/knowledge_base/: __init__.py  __main__.py  config.py  execution_subscriber.py  market_writer.py  postmortem_generator.py  thesis_writer.py  vault.py  wallet_writer.py
programs/oracle/programs/knowledge-base/tests/: __init__.py  test_vault.py
programs/oracle/programs/market-scanner/: pyproject.toml
programs/oracle/programs/market-scanner/market_scanner/: __init__.py  __main__.py  backtester.py  config.py  live_scanner.py  ml_classifier.py  patterns.py  pipeline_bridge.py  scanner.py  smc.py
programs/oracle/programs/market-scanner/models/: expanded_classifier.pkl  trade_classifier.pkl  v2_3186trades_64pct.pkl
programs/oracle/programs/market-scanner/tests/: __init__.py  test_patterns.py
programs/oracle/programs/nexus-agent/: pyproject.toml
programs/oracle/programs/nexus-agent/nexus_agent/: __init__.py  __main__.py  codec.py  config.py  manifest_handler.py
programs/oracle/programs/operator-dashboard/: CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/operator-dashboard/operator_dashboard/: __init__.py  __main__.py  config.py  redis_bridge.py  routes.py  telegram_relay.py
programs/oracle/programs/operator-dashboard/tests/: __init__.py
programs/oracle/programs/osint-fusion/: CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/osint-fusion/osint_fusion/: __init__.py  __main__.py  chroma_store.py  config.py  credibility.py  embedder.py  insight_emitter.py  market_state_updater.py  postmortem_subscriber.py  signal_subscriber.py
programs/oracle/programs/osint-fusion/tests/: __init__.py  test_pipeline.py
programs/oracle/programs/reasoning-engine/: CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/reasoning-engine/reasoning_engine/: __init__.py  __main__.py  anomaly_indexer.py  chroma_store.py  confidence_calibrator.py  config.py  context_assembler.py  evidence_weigher.py  floor_estimator.py  hypothesis_generator.py  insight_subscriber.py  scheduler.py  thesis_emitter.py
programs/oracle/programs/reasoning-engine/tests/: __init__.py  test_pipeline.py
programs/oracle/programs/signal-ingestion/: CLAUDE.md  CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/signal-ingestion/signal_ingestion/: CLAUDE.md  CONTEXT.md  MANIFEST.md  __init__.py  __main__.py  config.py
programs/oracle/programs/signal-ingestion/tests/: MANIFEST.md  __init__.py  test_birdeye.py  test_newsapi.py  test_polymarket_rest.py  test_polymarket_ws.py  test_reddit.py  test_wikipedia.py
programs/oracle/programs/solana-executor/: CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/solana-executor/solana_executor/: __init__.py  __main__.py  config.py  entry_exit.py  floor_requester.py  statistical_model.py
programs/oracle/programs/solana-executor/tests/: __init__.py  test_engine.py
programs/oracle/programs/whale-detector/: CLAUDE.md  CONTEXT.md  MANIFEST.md  pyproject.toml
programs/oracle/programs/whale-detector/tests/: MANIFEST.md  __init__.py  test_pipeline.py
programs/oracle/programs/whale-detector/whale_detector/: MANIFEST.md  __init__.py  __main__.py  anomaly_scorer.py  cascade_detector.py  config.py  event_emitter.py  signal_subscriber.py  threshold_flagger.py  wallet_registry.py
(+609 files in other folders)
