[workspace]
resolver = "2"
members = [
    "crates/nexus-core",
    "crates/nexus-spatial",
    "crates/nexus-simulation",
    "crates/nexus-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
nexus-core = { path = "crates/nexus-core" }
nexus-spatial = { path = "crates/nexus-spatial" }
nexus-simulation = { path = "crates/nexus-simulation" }

# Layer 3: Physics
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Layer 4: Networking + Serialization
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
flatbuffers = "24.3"
prost = "0.13"

# ECS
hecs = "0.10"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
