[workspace]
resolver = "2"
members = [
    "crates/nexus-core",
    "crates/nexus-schema",
    "crates/nexus-spatial",
    "crates/nexus-simulation",
    "crates/nexus-node",
    "crates/nexus-semantic",
    "crates/nexus-events",
    "crates/rvf-runtime",
    "crates/nexus-backends",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
nexus-core       = { path = "crates/nexus-core" }
nexus-schema     = { path = "crates/nexus-schema" }
nexus-spatial    = { path = "crates/nexus-spatial" }
nexus-simulation = { path = "crates/nexus-simulation" }
nexus-semantic   = { path = "crates/nexus-semantic" }
nexus-events     = { path = "crates/nexus-events" }
rvf-runtime      = { path = "crates/rvf-runtime" }
nexus-backends   = { path = "crates/nexus-backends" }
rvf-index        = { path = "/root/RuVector/crates/rvf/rvf-index" }

# Hashing
sha2       = "0.10"
crc32fast  = "1"

# Layer 3: Physics
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Layer 4: Networking + Serialization
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
flatbuffers = "24.3"
prost = "0.13"

# QUIC transport (ADR-TODO: replace WebSocket with Quinn for native clients)
# quinn = 0.11 uses rustls 0.23 (pki_types API)
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
bytes = "1"

# ECS
hecs = "0.10"

# HTTP
axum = "0.8"
tower = "0.5"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
