[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-base"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "oracle-shared",
    "redis[hiredis]>=5.0",
    "python-dotenv>=1.0",
    "anthropic>=0.30",
    "openai>=1.0",
    "chromadb>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["knowledge_base"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
