[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-scanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "oracle-shared",
    "redis[hiredis]>=5.0",
    "python-dotenv>=1.0",
    "yfinance>=1.2",
    "pycoingecko>=3.1",
    "ta>=0.11",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["market_scanner"]
