[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whale-detector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "oracle-shared",
    "redis[hiredis]>=5.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["whale_detector"]
