[package]
name = "nexus-semantic"
description = "NEXUS semantic routing layer — identity store, HNSW index, packet routing loop"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-core = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }

# HNSW approximate nearest neighbours — pure Rust, no unsafe
instant-distance = "0.6"
async-trait = "0.1"
thiserror   = "1"

[dev-dependencies]
tokio = { workspace = true }
