[package]
name = "nexus-semantic"
description = "NEXUS semantic routing layer — identity store, HNSW index, packet routing loop"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-core   = { workspace = true }
nexus-events = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }

# HNSW approximate nearest neighbours — zero-dep incremental insert
rvf-index = { workspace = true }
async-trait = "0.1"
thiserror   = "1"
axum        = { workspace = true }
tower       = { workspace = true }

# Local embedding model — AllMiniLML6V2 (384D), ~90 MB download on first use
# default features include ort-download-binaries-native-tls + hf-hub-native-tls
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }

[dev-dependencies]
tokio = { workspace = true }
